--- a/internals/generators/container/sagas.js.hbs
+++ b/internals/generators/container/sagas.js.hbs
@@ -1,9 +1,4 @@
-// import { take, call, put, select } from 'redux-saga/effects';
-
-// Individual exports for testing
-export function* defaultSaga() {
-  // See example in containers/HomePage/sagas.js
-}
+import { defaultSaga } from './defaultSaga';
 
 // All sagas to be loaded
 export default [
