--- a/internals/generators/component/es6.pure.js.hbs
+++ b/internals/generators/component/es6.pure.js.hbs
@@ -1,4 +1,4 @@
-/**
+/*
 *
 * {{ properCase name }}
 *
@@ -8,25 +8,17 @@ import React from 'react';
 import PropTypes from 'prop-types';
 // import styled from 'styled-components';
 
-{{#if wantMessages}}
-import { FormattedMessage } from 'react-intl';
-import messages from './messages';
-{{/if}}
-
 class {{ properCase name }} extends React.PureComponent { // eslint-disable-line react/prefer-stateless-function
+  static propTypes = {
+
+  }
+
   render() {
     return (
       <div>
-      {{#if wantMessages}}
-        <FormattedMessage {...messages.header} />
-      {{/if}}
       </div>
     );
   }
 }
-
-{{ properCase name }}.propTypes = {
-
-};
 
 export default {{ properCase name }};
